--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
     <p>Store.voidedmc.net</p>
     <p>www.voidedmc.net</p>
 </body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3581720027198766"
+     crossorigin="anonymous"></script>
 </html>
